--- a/src/CitySearch.css
+++ b/src/CitySearch.css
@@ -1,4 +1,5 @@
 .city {
+    width: 250px;
     font-size: 12pt;
     font-weight: bold;
     outline: none;
